--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run start-moo",
-    "start-moo": "node index.js 'The Furious Moo'"
+    "start-moo": "node index.js 'The Furious Moo' 'WWMJPD' 'I chan I' 'TeeMore'"
   },
   "author": "cwebley <cameron.webley@gmail.com>",
   "license": "MIT",
@@ -14,6 +14,8 @@
     "bottleneck": "^1.15.0",
     "commander": "^2.9.0",
     "console.table": "^0.7.0",
+    "limiter": "^1.1.0",
+    "neo-async": "^2.0.1",
     "request": "^2.79.0"
   }
 }
