--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "author": "cwebley <cameron.webley@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.15.3",
-    "bottleneck": "^1.15.0",
     "commander": "^2.9.0",
     "console.table": "^0.7.0",
     "limiter": "^1.1.0",
+    "moment": "^2.17.1",
     "neo-async": "^2.0.1",
     "request": "^2.79.0"
   }
