--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run start-moo",
-    "start-moo": "node index.js 'The Furious Moo' 'WWMJPD' 'I chan I' 'TFA Ch3ckMate' 'TeeMore'"
+    "start-moo": "node index.js 'The Furious Moo' 'WWMJPD' 'I chan I' 'TFA Ch3ckMate' 'TeeMore' 'Victory is BACK'"
   },
   "author": "cwebley <cameron.webley@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "commander": "^2.9.0",
     "console.table": "^0.7.0",
     "limiter": "^1.1.0",
